--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,6 +1,7 @@
 name: Deploy Node.js App
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -16,11 +17,11 @@ jobs:
 
       # Deploy to DigitalOcean via SSH
       - name: Deploy using SSH
-        uses: appleboy/ssh-action@v0.1.8
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SERVER_PASSWORD }}
+          password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             # Navigate to the app directory
             cd BESTRACT || exit
